--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ mysqlclient==2.2.4
 packaging==24.1
 passlib==1.7.4
 pluggy==1.5.0
+psycopg2==2.9.10
 pyasn1==0.6.0
 pycparser==2.22
 pydantic==2.8.2
@@ -36,6 +37,7 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.32
+sqlmodel==0.0.24
 starlette==0.38.2
 tomli==2.0.1
 typing_extensions==4.12.2
